--- a/requirements.txt
+++ b/requirements.txt
@@ -61,6 +61,7 @@ Pygments==2.19.1
 PyMuPDF==1.25.5
 pyparsing==3.2.3
 python-dateutil==2.9.0.post0
+python-jose==3.3.0 
 python-dotenv==1.1.0
 python-jose==3.4.0
 python-multipart==0.0.20
